--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <!-- css  -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 1170px)" href="css/phone.css">
 
     <title>Project2 | Food Delivery Website</title>
 </head>
@@ -45,7 +46,7 @@
 
     <!-- HOME  -->
     <section id="home">
-        <h1 class="h-primary">Welcome To My Online Meal</h1>
+        <h1 class="h-primary">Welcome To MyOnlineMeal</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium exercitationem and, natus fugiat <br>
             Lorem ipsum dolor, amet consectetur adipisicing elit.</p>
         <button class="btn">Order Now</button>
